plan for part 2 of the project

--- a/treball.ipynb
+++ b/treball.ipynb
@@ -38,6 +38,19 @@
     "[] How does \"modelos\" work, to go from raw ECG to segments of the ECG?\n",
     "[] Once we have detected the segment for the R-wave, how do we find the mV value of the wave? Is this the peak (sample with highest value in the interval of the wave)? Or do \"modelos\" already give us this information for the R-wave?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## Part 2\n",
+    "\n",
+    "Once we have classified whether it is left or right, our group has been assigned 3 possible \"reasons\" (SOOs). We'll need to make some ML model that, based on the ECG (raw data), it learns to predict the SOO. It seems like we mostly will need to filter and curate the initial dataset, and then apply standard ML techniques/data science to train models with good performance for the classification task."
+   ]
   }
  ],
  "metadata": {
