--- a/ECGExample.ipynb
+++ b/ECGExample.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,10 +50,49 @@
    ],
    "source": [
     "import pickle\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "data = pickle.load(open('full_data_corrected_2024.pkl', 'rb'))\n",
-    "print(data)\n",
-    "print(data.keys)\n",
-    "print(data.items)"
+    "data2 = pd.read_excel('Extras_Data_Full_2.xlsx')\n",
+    "data_no_v3 = data2.copy()\n",
+    "# Eliminar las filas donde 'PVC_transition' sea igual a 'V3'\n",
+    "data_no_v3 = data_no_v3[data_no_v3['PVC_transition'] != 'V3']\n",
+    "data_no_v3 = data_no_v3.dropna(subset=['PVC_transition'])\n",
+    "print(data_no_v3.PVC_transition.value_counts())\n",
+    "      \n",
+    "\n",
+    "# calculem el clinical score pels pacients que no tinguin v3\n",
+    "\n",
+    "#leads\n",
+    "data_no_v3['clinical_score_calculated'] = None\n",
+    "for i in range(len(data_no_v3)):\n",
+    "    if data_no_v3['PVC_transition'].iloc[i] == 'V2':\n",
+    "        data_no_v3['clinical_score_calculated'].iloc[i] = 2\n",
+    "    elif data_no_v3['PVC_transition'].iloc[i] == 'V1':\n",
+    "        data_no_v3['clinical_score_calculated'].iloc[i] = 3\n",
+    "    elif data_no_v3['PVC_transition'].iloc[i] == 'V4':\n",
+    "        data_no_v3['clinical_score_calculated'].iloc[i] = -2\n",
+    "    elif data_no_v3['PVC_transition'].iloc[i] == 'V5':\n",
+    "        data_no_v3['clinical_score_calculated'].iloc[i] = -3\n",
+    "    elif data_no_v3['PVC_transition'].iloc[i] == 'V6':\n",
+    "        data_no_v3['clinical_score_calculated'].iloc[i] = -4\n",
+    "    if data_no_v3['Sex'].iloc[i] == 'Male':\n",
+    "        data_no_v3['clinical_score_calculated'].iloc[i] += 1\n",
+    "    if data_no_v3['Age'].iloc[i] > 50:\n",
+    "        data_no_v3['clinical_score_calculated'].iloc[i] += 1\n",
+    "    if data_no_v3['HTA'].iloc[i] == 'Yes':\n",
+    "        data_no_v3['clinical_score_calculated'].iloc[i] += 1\n",
+    "\n",
+    "display(data_no_v3.head())\n",
+    "data_no_v3['Origin_calculated'] = None\n",
+    "for i in range(len(data_no_v3)):\n",
+    "    if data_no_v3['clinical_score_calculated'].iloc[i] >= 2:\n",
+    "        data_no_v3['Origin_calculated'].iloc[i] = 'LVOT Origin'\n",
+    "    else: \n",
+    "        data_no_v3['Origin_calculated'].iloc[i] = 'RVOT Origin'\n",
+    "display(data_no_v3.head())\n",
+    "\n",
+    "print(data_no_v3.Origin_calculated.value_counts())"
    ]
   },
   {
