wip: unified dataframe

--- a/data_cleaning/signal_data.ipynb
+++ b/data_cleaning/signal_data.ipynb
@@ -1199,16 +1199,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "42ecfc40",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'for' statement on line 21 (1038361448.py, line 25)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[18], line 25\u001b[0;36m\u001b[0m\n\u001b[0;31m    unified_df = pd.DataFrame(ecg_dict)\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 21\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of unified dataframe: (88, 1331)\n",
+      "\n",
+      "First few rows:\n",
+      "                                                        P36  \\\n",
+      "2-LV      {'I': [-0.021, -0.018000000000000002, -0.015, ...   \n",
+      "1-1-ReAO  {'I': [-0.033, -0.027, -0.024, -0.021, -0.021,...   \n",
+      "1-AO      {'I': [-0.036000000000000004, -0.0360000000000...   \n",
+      "2-RV      {'I': [0.006, 0.006, 0.006, 0.003, 0.003, 0.0,...   \n",
+      "2-AO      {'I': [-0.021, -0.015, -0.012, -0.012, -0.015,...   \n",
+      "\n",
+      "                                                       P122  \\\n",
+      "2-LV      {'I': [0.027, 0.027, 0.024, 0.021, 0.021, 0.01...   \n",
+      "1-1-ReAO                                                NaN   \n",
+      "1-AO      {'I': [0.543, 0.546, 0.54, 0.531, 0.513, 0.486...   \n",
+      "2-RV      {'I': [0.039, 0.036000000000000004, 0.03600000...   \n",
+      "2-AO                                                    NaN   \n",
+      "\n",
+      "                                                        P85  \\\n",
+      "2-LV      {'I': [-0.003, -0.006, -0.015, -0.027, -0.0360...   \n",
+      "1-1-ReAO  {'I': [-0.261, -0.267, -0.279, -0.297, -0.309,...   \n",
+      "1-AO      {'I': [0.006, -0.012, -0.027, -0.0360000000000...   \n",
+      "2-RV      {'I': [-0.012, -0.009000000000000001, -0.003, ...   \n",
+      "2-AO      {'I': [-0.126, -0.117, -0.12, -0.135, -0.156, ...   \n",
+      "\n",
+      "                                                       P103  \\\n",
+      "2-LV      {'I': [-0.039, -0.039, -0.039, -0.036000000000...   \n",
+      "1-1-ReAO  {'I': [-0.018000000000000002, -0.021, -0.01800...   \n",
+      "1-AO      {'I': [0.396, 0.429, 0.456, 0.483, 0.51, 0.537...   \n",
+      "2-RV      {'I': [0.078, 0.078, 0.081, 0.078, 0.075, 0.06...   \n",
+      "2-AO                                                    NaN   \n",
+      "\n",
+      "                                                        P86  \\\n",
+      "2-LV      {'I': [0.03, 0.021, 0.015, 0.006, 0.0, -0.003,...   \n",
+      "1-1-ReAO  {'I': [0.504, 0.54, 0.5700000000000001, 0.603,...   \n",
+      "1-AO      {'I': [0.624, 0.621, 0.612, 0.597, 0.573000000...   \n",
+      "2-RV      {'I': [0.036000000000000004, 0.039, 0.045, 0.0...   \n",
+      "2-AO      {'I': [-0.117, -0.108, -0.096, -0.081, -0.069,...   \n",
+      "\n",
+      "                                                        P42  \\\n",
+      "2-LV      {'I': [0.021, 0.024, 0.03, 0.033, 0.03, 0.021,...   \n",
+      "1-1-ReAO  {'I': [0.054, 0.054, 0.051000000000000004, 0.0...   \n",
+      "1-AO      {'I': [0.132, 0.129, 0.126, 0.123, 0.12, 0.114...   \n",
+      "2-RV      {'I': [-0.006, -0.006, -0.003, -0.003, -0.003,...   \n",
+      "2-AO      {'I': [-0.009000000000000001, -0.006, -0.006, ...   \n",
+      "\n",
+      "                                                         P3  \\\n",
+      "2-LV      {'I': [0.039, 0.018000000000000002, -0.003, -0...   \n",
+      "1-1-ReAO  {'I': [0.045, 0.045, 0.048, 0.057, 0.063, 0.06...   \n",
+      "1-AO      {'I': [0.054, 0.054, 0.054, 0.06, 0.063, 0.066...   \n",
+      "2-RV      {'I': [-0.012, -0.012, -0.009000000000000001, ...   \n",
+      "2-AO                                                    NaN   \n",
+      "\n",
+      "                                                        P65  \\\n",
+      "2-LV      {'I': [0.006, -0.003, -0.015, -0.021, -0.015, ...   \n",
+      "1-1-ReAO  {'I': [-0.012, -0.027, -0.036000000000000004, ...   \n",
+      "1-AO      {'I': [0.051000000000000004, 0.042, 0.03600000...   \n",
+      "2-RV      {'I': [-0.033, -0.036000000000000004, -0.042, ...   \n",
+      "2-AO      {'I': [-0.003, -0.012, -0.018000000000000002, ...   \n",
+      "\n",
+      "                                                        P63  \\\n",
+      "2-LV      {'I': [-0.015, -0.012, -0.012, -0.012, -0.015,...   \n",
+      "1-1-ReAO  {'I': [-0.033, -0.033, -0.033, -0.033, -0.0360...   \n",
+      "1-AO      {'I': [-0.17400000000000002, -0.183, -0.189, -...   \n",
+      "2-RV      {'I': [0.066, 0.069, 0.07200000000000001, 0.07...   \n",
+      "2-AO      {'I': [-0.003, 0.0, 0.0, 0.0, -0.003, -0.00900...   \n",
+      "\n",
+      "                                                         P5  ... P1229 P1260  \\\n",
+      "2-LV      {'I': [0.129, 0.129, 0.129, 0.123, 0.12, 0.123...  ...   NaN   NaN   \n",
+      "1-1-ReAO  {'I': [-0.039, -0.039, -0.039, -0.045, -0.0510...  ...   NaN   NaN   \n",
+      "1-AO      {'I': [-0.06, -0.069, -0.07200000000000001, -0...  ...   NaN   NaN   \n",
+      "2-RV      {'I': [-0.021, -0.021, -0.024, -0.021, -0.0180...  ...   NaN   NaN   \n",
+      "2-AO      {'I': [0.006, 0.003, 0.0, 0.0, -0.003, -0.006,...  ...   NaN   NaN   \n",
+      "\n",
+      "         P1274 P1201 P1198 P1161 manual eevv2 EEVV3   PM  \n",
+      "2-LV       NaN   NaN   NaN   NaN    NaN   NaN   NaN  NaN  \n",
+      "1-1-ReAO   NaN   NaN   NaN   NaN    NaN   NaN   NaN  NaN  \n",
+      "1-AO       NaN   NaN   NaN   NaN    NaN   NaN   NaN  NaN  \n",
+      "2-RV       NaN   NaN   NaN   NaN    NaN   NaN   NaN  NaN  \n",
+      "2-AO       NaN   NaN   NaN   NaN    NaN   NaN   NaN  NaN  \n",
+      "\n",
+      "[5 rows x 1331 columns]\n"
      ]
     }
    ],
@@ -1229,28 +1308,35 @@
     "        \n",
     "    # Convert structures to dataframe\n",
     "    structures_df = pd.DataFrame.from_dict(structures, orient='index')\n",
-    "    \n",
+    "\n",
     "    # Loop through each column (P__) in the structures dataframe\n",
     "    for col in structures_df.columns:\n",
     "        # Loop through each row in this column\n",
     "        for row_idx in structures_df.index:\n",
-    "            # TODO: Put each ECG in the dictionary, ideally columns being P__ and rows being the row index\n",
+    "            ecg = structures_df.loc[row_idx, col]\n",
+    "            if isinstance(ecg, dict):  # Ensure it's a valid ECG dictionary\n",
+    "                # Initialize the column in the dictionary if not already present\n",
+    "                if col not in ecg_dict:\n",
+    "                    ecg_dict[col] = {}\n",
+    "                # Store the ECG in the dictionary\n",
+    "                ecg_dict[col][row_idx] = ecg\n",
     "\n",
-    "# Create the unified DataFrame all at once\n",
-    "\"\"\" unified_df = pd.DataFrame(ecg_dict)\n",
+    "# Create the unified DataFrame from the dictionary\n",
+    "unified_df = pd.DataFrame.from_dict(ecg_dict, orient='index')\n",
+    "\n",
     "# Transpose so identifiers become columns\n",
     "unified_df = unified_df.T\n",
     "\n",
+    "# Display the shape and first few rows of the unified dataframe\n",
     "print(f\"Shape of unified dataframe: {unified_df.shape}\")\n",
     "print(\"\\nFirst few rows:\")\n",
-    "print(unified_df.head())\n",
-    " \"\"\"\n"
+    "print(unified_df.head())\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CompBioMed25",
    "language": "python",
    "name": "python3"
   },
@@ -1264,7 +1350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
