wip: in the unified df picking nested patient's ecgs from original patients we have about 14k ecgs

--- a/data_cleaning/signal_data.ipynb
+++ b/data_cleaning/signal_data.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "f9ec3829",
    "metadata": {},
    "outputs": [
@@ -51,13 +51,17 @@
       "P186    {'2-LV': {'P36': {'I': [-0.075 -0.075 -0.072 ....\n",
       "P245    {'2-RV': {'P157': {'I': [ 0.     0.     0.    ...\n",
       "P292    {'2-AO': {'P55': {'I': [-0.063 -0.051 -0.03  ....\n",
-      "Name: Structures, dtype: object\n"
+      "Name: Structures, dtype: object\n",
+      "P186 sessions: ['2-LV', '1-1-ReAO', '1-AO']\n"
      ]
     }
    ],
    "source": [
     "# Print the first 3 rows of column \"Structures\" of the DataFrame\n",
-    "print(data['Structures'].head(3))"
+    "print(data['Structures'].head(3))\n",
+    "\n",
+    "p186 = data['Structures']['P186']      # or however you index into the dict\n",
+    "print(\"P186 sessions:\", list(p186.keys()))"
    ]
   },
   {
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "5440ec16",
    "metadata": {},
    "outputs": [
@@ -79,10 +83,18 @@
      "output_type": "stream",
      "text": [
       "Name of the first cell: P186\n",
-      "2-LV        {'I': [-0.075, -0.075, -0.07200000000000001, -...\n",
-      "1-1-ReAO    {'I': [0.768, 0.747, 0.729, 0.705, 0.669, 0.62...\n",
-      "1-AO        {'I': [0.0, 0.003, 0.012, 0.015, 0.01800000000...\n",
-      "Name: P36, dtype: object\n"
+      "P36     {'I': [-0.075, -0.075, -0.07200000000000001, -...\n",
+      "P122    {'I': [-0.042, -0.045, -0.048, -0.048, -0.048,...\n",
+      "P85     {'I': [-0.048, -0.045, -0.042, -0.042, -0.042,...\n",
+      "P103    {'I': [-0.045, -0.048, -0.048, -0.048, -0.045,...\n",
+      "P86     {'I': [0.003, 0.009000000000000001, 0.015, 0.0...\n",
+      "                              ...                        \n",
+      "P112    {'I': [0.213, 0.219, 0.228, 0.243, 0.261, 0.28...\n",
+      "P114    {'I': [0.033, 0.033, 0.036000000000000004, 0.0...\n",
+      "P17     {'I': [0.009000000000000001, 0.009000000000000...\n",
+      "P29                                                   NaN\n",
+      "P11                                                   NaN\n",
+      "Name: 2-LV, Length: 136, dtype: object\n"
      ]
     }
    ],
@@ -92,7 +104,7 @@
     "    # Get the first item from the series\n",
     "    structures_dict = structures_series.iloc[0]\n",
     "    if isinstance(structures_dict, dict):\n",
-    "        return pd.DataFrame.from_dict(structures_dict, orient='index')\n",
+    "        return pd.DataFrame.from_dict(structures_dict, orient='columns')\n",
     "    return None\n",
     "# Example using the first row's Structures\n",
     "first_row_structures_cell = get_structures_df(data['Structures'].head(1))\n",
@@ -1199,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "42ecfc40",
    "metadata": {},
    "outputs": [
@@ -1332,11 +1344,59 @@
     "print(\"\\nFirst few rows:\")\n",
     "print(unified_df.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49af2cbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of valid ECGs in the unified dataframe: 13861\n",
+      "Number of invalid ECGs: 103267\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find and verify how many ECGs we have in the unified dataframe, by looking at each cell value to verify if its NaN,\n",
+    "# and if not, if it has the shape of an ECG (12 leads, 2500 samples)\n",
+    "def is_ecg_valid(ecg):\n",
+    "    # First guard clause: check if ecg is a dictionary\n",
+    "    if not isinstance(ecg, dict):\n",
+    "        return False\n",
+    "    \n",
+    "    # Second guard clause: check if ecg has exactly 12 leads\n",
+    "    if len(ecg) != 12:\n",
+    "        print(f\"Invalid number of leads: {len(ecg)}\")\n",
+    "        return False\n",
+    "    \n",
+    "    # Check if each lead has 2500 samples\n",
+    "    for lead in ecg.values():\n",
+    "        if len(lead) != 2500:\n",
+    "            print(f\"Invalid number of samples in lead: {len(lead)}\")\n",
+    "            return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "# Initialize a counter for valid ECGs\n",
+    "valid_ecg_count = 0\n",
+    "# Loop through the unified dataframe\n",
+    "for col in unified_df.columns:\n",
+    "    for row_idx in unified_df.index:\n",
+    "        ecg = unified_df.loc[row_idx, col]\n",
+    "        if is_ecg_valid(ecg):\n",
+    "            valid_ecg_count += 1\n",
+    "\n",
+    "print(f\"Number of valid ECGs in the unified dataframe: {valid_ecg_count}\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CompBioMed25",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1350,7 +1410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
