--- a/data_cleaning/signal_data.ipynb
+++ b/data_cleaning/signal_data.ipynb
@@ -27,7 +27,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "data = pickle.load(open('../all_points_may_2024.pkl', 'rb'))\n",
-    "data = pd.DataFrame(data).T\n"
+    "data = pd.DataFrame(data).T\n",
+    "import os"
    ]
   },
   {
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "efa282d0",
    "metadata": {},
    "outputs": [],
@@ -774,78 +775,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a7213a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def expand_ecg_ultrafast(df):\n",
+    "    lead_columns = [col for col in df.columns if isinstance(df[col].iloc[0], (list, np.ndarray))]\n",
+    "    static_columns = [col for col in df.columns if col not in lead_columns]\n",
+    "\n",
+    "    # Converteix les columnes de derivació en matrius 2D i guarda els noms de columnes\n",
+    "    expanded_leads = []\n",
+    "    col_names = []\n",
+    "\n",
+    "    for lead in lead_columns:\n",
+    "        lead_matrix = np.stack(df[lead].values)\n",
+    "        expanded_leads.append(lead_matrix)\n",
+    "        col_names.extend([f\"{lead}_{i}\" for i in range(lead_matrix.shape[1])])\n",
+    "\n",
+    "    # Concatena totes les derivacions horizontalment\n",
+    "    signal_matrix = np.hstack(expanded_leads)\n",
+    "\n",
+    "    # Crea un DataFrame amb les derivacions expandides\n",
+    "    signal_df = pd.DataFrame(signal_matrix, columns=col_names)\n",
+    "\n",
+    "    # Afegeix les columnes extra (com l'ID)\n",
+    "    if static_columns:\n",
+    "        final_df = pd.concat([df[static_columns].reset_index(drop=True), signal_df], axis=1)\n",
+    "    else:\n",
+    "        final_df = signal_df\n",
+    "\n",
+    "    return final_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "94e625c0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
+     "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 49\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;66;03m# Para obtener el DataFrame expandido en memoria:\u001b[39;00m\n\u001b[0;32m---> 49\u001b[0m expanded_df \u001b[38;5;241m=\u001b[39m \u001b[43mexpand_ecg_to_samples_rowwise\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult_df_leads\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;66;03m# O para guardar directamente en disco (sin ocupar RAM):\u001b[39;00m\n\u001b[1;32m     52\u001b[0m expand_ecg_to_samples_rowwise(result_df_leads, output_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexpanded_ecg.parquet\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[4], line 15\u001b[0m, in \u001b[0;36mexpand_ecg_to_samples_rowwise\u001b[0;34m(df, output_path, batch_size)\u001b[0m\n\u001b[1;32m     13\u001b[0m     samples \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(row[lead])\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i, sample \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(samples):\n\u001b[0;32m---> 15\u001b[0m         expanded_row[\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlead\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m sample\n\u001b[1;32m     16\u001b[0m expanded_rows\u001b[38;5;241m.\u001b[39mappend(expanded_row)\n\u001b[1;32m     17\u001b[0m all_columns\u001b[38;5;241m.\u001b[39mupdate(expanded_row\u001b[38;5;241m.\u001b[39mkeys())\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
+    "# 1. Expandim el DataFrame (aquí és on triga una mica)\n",
+    "expanded_df = expand_ecg_ultrafast(result_df_leads)\n",
     "\n",
-    "def expand_ecg_to_samples_rowwise(df, output_path=None, batch_size=100):\n",
-    "    lead_columns = [col for col in df.columns if isinstance(df[col].dropna().iloc[0], (list, np.ndarray))]\n",
-    "\n",
-    "    expanded_rows = []\n",
-    "    all_columns = set()\n",
-    "\n",
-    "    # Procesar por lotes (batch)\n",
-    "    for idx, row in df.iterrows():\n",
-    "        base_info = {col: row[col] for col in df.columns if col not in lead_columns}\n",
-    "        expanded_row = base_info.copy()\n",
-    "\n",
-    "        for lead in lead_columns:\n",
-    "            samples = np.array(row[lead])\n",
-    "            for i, sample in enumerate(samples):\n",
-    "                expanded_row[f\"{lead}_{i}\"] = sample\n",
-    "        expanded_rows.append(expanded_row)\n",
-    "        all_columns.update(expanded_row.keys())\n",
-    "\n",
-    "        # Guardar por batch si es muy grande\n",
-    "        if batch_size and len(expanded_rows) >= batch_size:\n",
-    "            batch_df = pd.DataFrame(expanded_rows)\n",
-    "            if output_path:\n",
-    "                batch_df.to_parquet(output_path, engine='fastparquet', index=False, append=True)\n",
-    "            else:\n",
-    "                if 'final_df' not in locals():\n",
-    "                    final_df = batch_df\n",
-    "                else:\n",
-    "                    final_df = pd.concat([final_df, batch_df], ignore_index=True)\n",
-    "            expanded_rows = []\n",
-    "\n",
-    "    # Guardar lo que quede\n",
-    "    if expanded_rows:\n",
-    "        batch_df = pd.DataFrame(expanded_rows)\n",
-    "        if output_path:\n",
-    "            batch_df.to_parquet(output_path, engine='fastparquet', index=False, append=True)\n",
-    "        else:\n",
-    "            if 'final_df' not in locals():\n",
-    "                final_df = batch_df\n",
-    "            else:\n",
-    "                final_df = pd.concat([final_df, batch_df], ignore_index=True)\n",
-    "\n",
-    "    if not output_path:\n",
-    "        return final_df\n",
-    "    else:\n",
-    "        print(f\"Data written to {output_path}\")\n",
-    "        return None\n",
-    "    \n",
-    "    # Para obtener el DataFrame expandido en memoria:\n",
-    "expanded_df = expand_ecg_to_samples_rowwise(result_df_leads)\n",
-    "\n",
-    "# O para guardar directamente en disco (sin ocupar RAM):\n",
-    "expand_ecg_to_samples_rowwise(result_df_leads, output_path='expanded_ecg.parquet')\n",
-    "\n"
+    "# 2. Un cop s'ha acabat i el tens en memòria, el guardes\n",
+    "expanded_df.to_parquet(\"expanded_ecg.parquet\", index=False)\n",
+    "# O en CSV si ho prefereixes\n",
+    "# expanded_df.to_csv(\"expanded_ecg.csv\", index=False)\n"
    ]
   }
  ],
