--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -7,30 +7,41 @@
    "source": [
     "# An interpretable prediction system for the Site Of Origin (SOO) of Outflow Tract Ventricular Arrhythmias (OTVAs)\n",
     "\n",
-    "## Introduction\n",
+    "## 0. Starting point\n",
     "\n",
-    "Outflow Tract Ventricular Arrhythmias (OTVAs) are premature ventricular beats. In structurally normal hearts, they often present characteristic ECG morphologies but can be challenging to manually localize precisely without invasive mapping.\n",
+    "## 1. Our approach\n",
     "\n",
-    "We can consider each patient **case** to generally consist of:\n",
-    "- A 12-lead **ECG signal** segment (≈2.5 s)  \n",
-    "- Basic **demographic data** (age, sex, height,...)\n",
-    "- A (clinician-assigned) **label** indicating the arrhythmia's Site of Origin (SOO)\n",
+    "## 2. Demographic data preprocessing\n",
     "\n",
-    "We aim to build a system of models that can *learn* from this data and predict the **Site Of Origin (SOO)** of OTVAs. The goal is to be able to generalize to new patient cases, and have both 1) interpretability of the learned criteria used for classification and 2) a fast inference time per prediction.\n",
+    "## 3. ECG signal preprocessing\n",
     "\n",
-    "We will complete this broad task in two parts:\n",
+    "## 4. Model A: Dimensionality reduction for ECG signals\n",
     "\n",
-    "1. **Part 1: Left vs. Right Outflow Tract**  \n",
-    "   Classify each arrhythmia focus as coming from the Left Ventricular Outflow Tract (LVOT) or the Right Ventricular Outflow Tract (RVOT).\n",
+    "## 5. Interpreting Model A\n",
     "\n",
-    "2. **Part 2: Sub-regional Localization**  \n",
-    "   On those beats classified as **LVOT** in Part 1, further discriminate between origins at the **Right Coronary Cusp (RCC)** and the **aortomitral commissure** (the mitral-aortic continuity), as assigned to our group D. This is in our case a sub-classification task, since the Right Coronary Cusp (RCC) is one of the three aortic cusps (alongside LCC and NCC) sitting in the left ventricular outflow tract; while the “commissure” in this context is the junction either between the RCC & LCC or the mitral-aortic continuity, being in both cases a region of the LVOT."
+    "## 5. Preparing data for training for the two tasks\n",
+    "\n",
+    "## 6. Model B: Classification of the SOO\n",
+    "\n",
+    "## 7. Interpreting Model B\n",
+    "\n",
+    "## 8. Model C: Classification of the sub-regions\n",
+    "\n",
+    "## 9. Interpreting Model C\n",
+    "\n",
+    "## 10. Final model evaluation and exporting for inference\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
