added links and todos

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -9,6 +9,20 @@
     "\n",
     "## 0. Starting point\n",
     "\n",
+    "See the [README](README.md) for a general introduction to the project.\n",
+    "\n",
+    "### 0.1. Python development environment\n",
+    "\n",
+    "//TODO: set requirements.txt to install all notebook dependencies\n",
+    "\n",
+    "### 0.2. About the dataset\n",
+    "\n",
+    "We were provided with a dataset (...)\n",
+    "\n",
+    "//TODO: prepare it for reproducibility from the repo\n",
+    "\n",
+    "### 0.3. Patient cases\n",
+    "\n",
     "## 1. Our approach\n",
     "\n",
     "## 2. Demographic data preprocessing\n",
